new-resources.yaml
---
# Source: flux-app/templates/install.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: "RELEASE-NAME"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "flux-app"
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/version: "0.19.0"
    helm.sh/chart: "flux-app-0.0.0"
  name: allow-egress
  namespace: default
spec:
  egress:
    - {}
  ingress:
    - from:
        - podSelector: {}
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
# Source: flux-app/templates/install.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: "RELEASE-NAME"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "flux-app"
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/version: "0.19.0"
    helm.sh/chart: "flux-app-0.0.0"
  name: allow-scraping
  namespace: default
spec:
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - port: 8080
          protocol: TCP
  podSelector: {}
  policyTypes:
    - Ingress
---
# Source: flux-app/templates/install.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: "RELEASE-NAME"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "flux-app"
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/version: "0.19.0"
    helm.sh/chart: "flux-app-0.0.0"
  name: allow-webhooks
  namespace: default
spec:
  ingress:
    - from:
        - namespaceSelector: {}
  podSelector:
    matchLabels:
      app: notification-controller
      app.kubernetes.io/instance: "RELEASE-NAME"
      app.kubernetes.io/managed-by: "Helm"
      app.kubernetes.io/name: "flux-app"
  policyTypes:
    - Ingress
---
# Source: flux-app/templates/install.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: "RELEASE-NAME"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "flux-app"
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/version: "0.19.0"
    control-plane: controller
    helm.sh/chart: "flux-app-0.0.0"
  name: notification-controller
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: notification-controller
    app.kubernetes.io/instance: "RELEASE-NAME"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "flux-app"
    app.kubernetes.io/version: "0.19.0"
    helm.sh/chart: "flux-app-0.0.0"
  type: ClusterIP
---
# Source: flux-app/templates/install.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: "RELEASE-NAME"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "flux-app"
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/version: "0.19.0"
    control-plane: controller
    helm.sh/chart: "flux-app-0.0.0"
  name: source-controller
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: source-controller
    app.kubernetes.io/instance: "RELEASE-NAME"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "flux-app"
    app.kubernetes.io/version: "0.19.0"
    helm.sh/chart: "flux-app-0.0.0"
  type: ClusterIP
---
# Source: flux-app/templates/install.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: "RELEASE-NAME"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "flux-app"
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/version: "0.19.0"
    control-plane: controller
    helm.sh/chart: "flux-app-0.0.0"
  name: webhook-receiver
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http-webhook
  selector:
    app: notification-controller
    app.kubernetes.io/instance: "RELEASE-NAME"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "flux-app"
    app.kubernetes.io/version: "0.19.0"
    helm.sh/chart: "flux-app-0.0.0"
  type: ClusterIP
---
# Source: flux-app/templates/install.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: "RELEASE-NAME"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "flux-app"
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/version: "0.19.0"
    control-plane: controller
    helm.sh/chart: "flux-app-0.0.0"
  name: helm-controller
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helm-controller
      app.kubernetes.io/instance: "RELEASE-NAME"
      app.kubernetes.io/managed-by: "Helm"
      app.kubernetes.io/name: "flux-app"
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app: helm-controller
        app.kubernetes.io/instance: "RELEASE-NAME"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/name: "flux-app"
        app.kubernetes.io/version: "0.19.0"
        helm.sh/chart: "flux-app-0.0.0"
    spec:
      containers:
        - args:
            - --events-addr=http://notification-controller/
            - --watch-all-namespaces
            - --log-level=info
            - --log-encoding=json
            - --enable-leader-election
          image: 'quay.io/giantswarm/fluxcd-helm-controller:v0.12.1'
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: healthz
          name: manager
          ports:
            - containerPort: 8080
              name: http-prom
            - containerPort: 9440
              name: healthz
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: healthz
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 100
          volumeMounts:
            - mountPath: /tmp
              name: temp
      serviceAccountName: helm-controller
      terminationGracePeriodSeconds: 600
      volumes:
        - emptyDir: {}
          name: temp
---
# Source: flux-app/templates/install.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: "RELEASE-NAME"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "flux-app"
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/version: "0.19.0"
    control-plane: controller
    helm.sh/chart: "flux-app-0.0.0"
  name: image-automation-controller
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-automation-controller
      app.kubernetes.io/instance: "RELEASE-NAME"
      app.kubernetes.io/managed-by: "Helm"
      app.kubernetes.io/name: "flux-app"
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app: image-automation-controller
        app.kubernetes.io/instance: "RELEASE-NAME"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/name: "flux-app"
        app.kubernetes.io/version: "0.19.0"
        helm.sh/chart: "flux-app-0.0.0"
    spec:
      containers:
        - args:
            - --events-addr=http://notification-controller/
            - --watch-all-namespaces
            - --log-level=info
            - --log-encoding=json
            - --enable-leader-election
          image: 'quay.io/giantswarm/fluxcd-image-automation-controller:v0.15.0'
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: healthz
          name: manager
          ports:
            - containerPort: 8080
              name: http-prom
            - containerPort: 9440
              name: healthz
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: healthz
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 100
          volumeMounts:
            - mountPath: /tmp
              name: temp
      securityContext:
        fsGroup: 1337
      serviceAccountName: image-automation-controller
      terminationGracePeriodSeconds: 10
      volumes:
        - emptyDir: {}
          name: temp
---
# Source: flux-app/templates/install.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: "RELEASE-NAME"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "flux-app"
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/version: "0.19.0"
    control-plane: controller
    helm.sh/chart: "flux-app-0.0.0"
  name: image-reflector-controller
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-reflector-controller
      app.kubernetes.io/instance: "RELEASE-NAME"
      app.kubernetes.io/managed-by: "Helm"
      app.kubernetes.io/name: "flux-app"
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app: image-reflector-controller
        app.kubernetes.io/instance: "RELEASE-NAME"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/name: "flux-app"
        app.kubernetes.io/version: "0.19.0"
        helm.sh/chart: "flux-app-0.0.0"
    spec:
      containers:
        - args:
            - --events-addr=http://notification-controller/
            - --watch-all-namespaces
            - --log-level=info
            - --log-encoding=json
            - --enable-leader-election
          image: 'quay.io/giantswarm/fluxcd-image-reflector-controller:v0.13.0'
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: healthz
          name: manager
          ports:
            - containerPort: 8080
              name: http-prom
            - containerPort: 9440
              name: healthz
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: healthz
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 100
          volumeMounts:
            - mountPath: /tmp
              name: temp
            - mountPath: /data
              name: data
      securityContext:
        fsGroup: 1337
      serviceAccountName: image-reflector-controller
      terminationGracePeriodSeconds: 10
      volumes:
        - emptyDir: {}
          name: temp
        - emptyDir: {}
          name: data
---
# Source: flux-app/templates/install.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: "RELEASE-NAME"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "flux-app"
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/version: "0.19.0"
    control-plane: controller
    helm.sh/chart: "flux-app-0.0.0"
  name: kustomize-controller
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kustomize-controller
      app.kubernetes.io/instance: "RELEASE-NAME"
      app.kubernetes.io/managed-by: "Helm"
      app.kubernetes.io/name: "flux-app"
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app: kustomize-controller
        app.kubernetes.io/instance: "RELEASE-NAME"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/name: "flux-app"
        app.kubernetes.io/version: "0.19.0"
        helm.sh/chart: "flux-app-0.0.0"
    spec:
      containers:
        - args:
            - --events-addr=http://notification-controller/
            - --watch-all-namespaces
            - --log-level=info
            - --log-encoding=json
            - --enable-leader-election
          image: 'quay.io/giantswarm/fluxcd-kustomize-controller:v0.16.0'
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: healthz
          name: manager
          ports:
            - containerPort: 8080
              name: http-prom
            - containerPort: 9440
              name: healthz
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: healthz
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 100
          volumeMounts:
            - mountPath: /tmp
              name: temp
      securityContext:
        fsGroup: 1337
      serviceAccountName: kustomize-controller
      terminationGracePeriodSeconds: 60
      volumes:
        - emptyDir: {}
          name: temp
---
# Source: flux-app/templates/install.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: "RELEASE-NAME"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "flux-app"
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/version: "0.19.0"
    control-plane: controller
    helm.sh/chart: "flux-app-0.0.0"
  name: notification-controller
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-controller
      app.kubernetes.io/instance: "RELEASE-NAME"
      app.kubernetes.io/managed-by: "Helm"
      app.kubernetes.io/name: "flux-app"
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app: notification-controller
        app.kubernetes.io/instance: "RELEASE-NAME"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/name: "flux-app"
        app.kubernetes.io/version: "0.19.0"
        helm.sh/chart: "flux-app-0.0.0"
    spec:
      containers:
        - args:
            - --watch-all-namespaces
            - --log-level=info
            - --log-encoding=json
            - --enable-leader-election
          image: 'quay.io/giantswarm/fluxcd-notification-controller:v0.18.0'
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: healthz
          name: manager
          ports:
            - containerPort: 9090
              name: http
            - containerPort: 9292
              name: http-webhook
            - containerPort: 8080
              name: http-prom
            - containerPort: 9440
              name: healthz
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: healthz
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 100
          volumeMounts:
            - mountPath: /tmp
              name: temp
      serviceAccountName: notification-controller
      terminationGracePeriodSeconds: 10
      volumes:
        - emptyDir: {}
          name: temp
---
# Source: flux-app/templates/install.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: "RELEASE-NAME"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "flux-app"
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/version: "0.19.0"
    control-plane: controller
    helm.sh/chart: "flux-app-0.0.0"
  name: source-controller
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: source-controller
      app.kubernetes.io/instance: "RELEASE-NAME"
      app.kubernetes.io/managed-by: "Helm"
      app.kubernetes.io/name: "flux-app"
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app: source-controller
        app.kubernetes.io/instance: "RELEASE-NAME"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/name: "flux-app"
        app.kubernetes.io/version: "0.19.0"
        helm.sh/chart: "flux-app-0.0.0"
    spec:
      containers:
        - args:
            - --events-addr=http://notification-controller/
            - --watch-all-namespaces
            - --log-level=info
            - --log-encoding=json
            - --enable-leader-election
            - --storage-path=/data
            - --storage-adv-addr=source-controller.$(RUNTIME_NAMESPACE).svc.cluster.local.
          image: 'quay.io/giantswarm/fluxcd-source-controller:v0.16.0'
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: healthz
          name: manager
          ports:
            - containerPort: 9090
              name: http
            - containerPort: 8080
              name: http-prom
            - containerPort: 9440
              name: healthz
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 100
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /tmp
              name: tmp
      securityContext:
        fsGroup: 1337
      serviceAccountName: source-controller
      terminationGracePeriodSeconds: 10
      volumes:
        - emptyDir: {}
          name: data
        - emptyDir: {}
          name: tmp
